Adjusted cart layout to make the 'Go To Secure Checkout' button smaller. Z-index changed for search to avoid being shown when cart open.

--- a/bag/static/bag/css/bag.css
+++ b/bag/static/bag/css/bag.css
@@ -145,6 +145,10 @@ i.material-icons.lock.right {
     font-size: 1.5rem;
 }
 
+form.bag-btn {
+    height: fit-content;
+}
+
 /* Media Queries */
 
 /* Navbar */
