--- a/static/css/style.css
+++ b/static/css/style.css
@@ -225,7 +225,7 @@ nav .input-field {
   right: 1%;
   max-width: fit-content;
   max-height: fit-content;
-  z-index: 99999999999;
+  z-index: 99999999;
 }
 
 
@@ -305,7 +305,7 @@ img.responsive-img {
   nav .input-field {
     height: 4rem;
     margin-left: 1rem;
-    z-index: 999999;
+    z-index: 999;
   }
 }
 
